--- a/index.html
+++ b/index.html
@@ -3,10 +3,62 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sanji - Order Food Online | Jaipur's Best Food Delivery</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  
+  <!-- SEO Meta Tags -->
+  <title>Sanji - Order Food Online | Jaipur's Best Food Delivery Service</title>
+  <meta name="description" content="Order delicious food from 15+ top restaurants in Jaipur. Fast delivery within 30 minutes. Indian, Chinese, Italian, and more cuisines available. Free delivery on first order!">
+  <meta name="keywords" content="food delivery, Jaipur restaurants, online food order, fast delivery, Indian food, Chinese food, pizza delivery, burger delivery, Sanji food">
+  <meta name="author" content="Sanji Food Delivery">
+  <meta name="robots" content="index, follow">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://sanji.vercel.app/">
+  <meta property="og:title" content="Sanji - Order Food Online | Jaipur's Best Food Delivery">
+  <meta property="og:description" content="Order delicious food from 15+ top restaurants in Jaipur. Fast delivery within 30 minutes.">
+  <meta property="og:image" content="https://images.unsplash.com/photo-1495521821757-a1efb6729352?auto=format&fit=crop&w=1200&q=80">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://sanji.vercel.app/">
+  <meta property="twitter:title" content="Sanji - Order Food Online | Jaipur">
+  <meta property="twitter:description" content="Order delicious food from 15+ top restaurants in Jaipur. Fast delivery within 30 minutes.">
+  <meta property="twitter:image" content="https://images.unsplash.com/photo-1495521821757-a1efb6729352?auto=format&fit=crop&w=1200&q=80">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍕</text></svg>">
+  
+  <!-- Fonts & Styles -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
+  
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FoodEstablishment",
+    "name": "Sanji Food Delivery",
+    "description": "Online food delivery service in Jaipur",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "123 Food Street, MI Road",
+      "addressLocality": "Jaipur",
+      "addressRegion": "Rajasthan",
+      "postalCode": "302001",
+      "addressCountry": "IN"
+    },
+    "telephone": "+91-141-1234567",
+    "servesCuisine": ["Indian", "Chinese", "Italian", "Rajasthani", "Fast Food"],
+    "priceRange": "₹₹",
+    "openingHours": "Mo-Su 09:00-23:00",
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.8",
+      "reviewCount": "50000"
+    }
+  }
+  </script>
 </head>
 <body>
   <!-- HEADER / NAVBAR -->
@@ -16,7 +68,12 @@
       <div class="search-bar-header">
         <input id="searchInput" type="search" placeholder="Search restaurants, dishes, cuisines..." aria-label="Search">
       </div>
-      <nav class="main-nav">
+      <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <nav class="main-nav" id="mainNav">
         <a href="about.html">About</a>
         <a href="faq.html">FAQ</a>
         <a href="contact.html">Contact</a>
